@@ -4,6 +4,9 @@ Changelog
 2.1a2 (unreleased)
 ------------------
 
+- Added object_cut view.
+  [tschanzt]
+
 - Remove KSS dependency from AJAX table views.
   [cah190]
 
